--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng build --aot --output-path=public && node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,15 +12,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.0.0",
+    "@angular/cdk": "~7.0.2",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
+    "@angular/material": "^7.0.2",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
+    "mongoose": "^5.3.8",
+    "mongoose-timestamp": "^0.6.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
